--- a/implementacao/regescweb/src/main/resources/templates/vantagens.html
+++ b/implementacao/regescweb/src/main/resources/templates/vantagens.html
@@ -1,1 +1,88 @@
-LOGADO
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vantagens</title>
+    <link rel="stylesheet" th:href="@{/css/login.css}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/cadastro.css}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/cb3fc013e7.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-xxl navbarcor font">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#" style="padding-left: 20px;">Logo</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse " id="navbarNavDropdown">
+                <ul class="navbar-nav ms-auto controle">
+                    <li class="nav-item espacamentoitens">
+                        <a th:text="${nomeUsuario}" class="nav-link sublinhado"></a>
+                    </li>
+                    <li class="nav-item espacamentoitens">
+                        <a class="nav-link sublinhado" href="#">Sobre</a>
+                    </li>
+                    <li class="nav-items dropdown espacamentoitens">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <i class="fas fa-user"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#">Cadastro</a></li>
+                            <li><a class="dropdown-item" href="#">Fazer login</a></li>
+                            <li><a class="dropdown-item" href="#">Dúvidas frequentes</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container-fluid" style="border: 5px;">
+        <h2>Vantagens disponíveis</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Descricao</th>
+                    <th scope="col">Custo</th>
+                    <th scope="col">Empresa</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="item: ${listaVantagens}">
+                    <td th:text="${item.id}"></td>
+                    <td th:text="${item.nome}"></td>
+                    <td th:text="${item.descricao}"></td>
+                    <td th:text="${item.custo}"></td>
+                    <td th:text="${item.empresaId}"></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="container-fluid">
+        <h2>Obter vantagem</h2>
+        <h3 th:text="'Saldo atual: ' + ${aluno.saldo}">Saldo atual: </h3>
+        <form action="/obter-vantagem" method="post">
+            <div class="mb-3">
+                <label for="obter-vantagem-input" class="form-label">Id Vantagem</label>
+                <input type="text" name="idVantagem" class="form-control" id="obter-vantagem-input">
+                <div id="obter-vantagem-help" class="form-text">Digite o id da vantagem desejada.</div>
+            </div>
+            <button type="submit" class="btn btn-primary">Obter</button>
+        </form>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
