--- a/implementacao/regescweb/src/main/resources/templates/login-professor.html
+++ b/implementacao/regescweb/src/main/resources/templates/login-professor.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vantagens</title>
+    <title>Login</title>
     <link rel="stylesheet" th:href="@{/css/login.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -12,7 +11,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/cb3fc013e7.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
     <nav class="navbar navbar-expand-xxl navbarcor font">
         <div class="container-fluid">
@@ -24,7 +22,7 @@
             <div class="collapse navbar-collapse " id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto controle">
                     <li class="nav-item espacamentoitens">
-                        <a th:text="${nomeUsuario}" class="nav-link sublinhado"></a>
+                        <a class="nav-link active sublinhado" aria-current="page" href="#">Login</a>
                     </li>
                     <li class="nav-item espacamentoitens">
                         <a class="nav-link sublinhado" href="#">Sobre</a>
@@ -35,7 +33,6 @@
                             <i class="fas fa-user"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#">Cadastro</a></li>
                             <li><a class="dropdown-item" href="#">Fazer login</a></li>
                             <li><a class="dropdown-item" href="#">Dúvidas frequentes</a></li>
                         </ul>
@@ -44,62 +41,42 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid" style="border: 5px;">
-        <h2>Vantagens disponíveis</h2>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Nome</th>
-                    <th scope="col">Descricao</th>
-                    <th scope="col">Custo</th>
-                    <th scope="col">Empresa</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="item: ${listaVantagens}">
-                    <td th:text="${item.id}"></td>
-                    <td th:text="${item.nome}"></td>
-                    <td th:text="${item.descricao}"></td>
-                    <td th:text="${item.custo}"></td>
-                    <td th:text="${item.empresaId}"></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="container-fluid">
-        <h2>Obter vantagem</h2>
-        <h3 th:text="'Saldo atual: ' + ${aluno.saldo}">Saldo atual: </h3>
-        <form action="/obter-vantagem" method="post">
-            <div class="mb-3">
-                <label for="obter-vantagem-input" class="form-label">Id Vantagem</label>
-                <input type="text" name="idVantagem" class="form-control" id="obter-vantagem-input">
-                <div id="obter-vantagem-help" class="form-text">Digite o id da vantagem desejada.</div>
-            </div>
-            <button type="submit" class="btn btn-primary">Obter</button>
-        </form>
-    </div>
-    <br><br><br>
-    <table class="table">
-        <h2>Transações:
-        </h2>
-        <thead>
-            <tr>
-                <th>Data</th>
-                <th>Valor</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="transacao : ${transacoesDoAluno}">
-                <td th:text="${#temporals.format(transacao.data, 'dd/MM/yyyy HH:mm:ss')}"></td>
-                <td th:text="${transacao.valor}"></td>
-            </tr>
-        </tbody>
-    </table>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+            <div class="card border-0 shadow rounded-3 my-5">
+              <div class="card-body p-4 p-sm-5">
+                <h2 class="card-title text-center mb-5 fw-light fs-1">Login</h2>
+                <form method="POST" action="/logarProfessor"> <!-- method post: metodo para enviar dados | action: executar acao /login (metodo logar) definida no LoginController -->
+                  <div class="form-floating mb-3">
+                    <input type="text" class="form-control" name="nome" required>
+                    <label for="floatingInput">Nome</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input type="password" class="form-control" name="senha" required>
+                    <label for="floatingPassword">Senha</label>
+                  </div>
+    
+                  <div class="form-check mb-3">
+                    <input class="form-check-input" type="checkbox" id="lembrar" name="lembrar">
+                    <label class="form-check-label" for="lembrar">
+                      Lembrar senha
+                    </label>
+                  </div>
+                  <div th:if="${erro != null}" th:text="${erro}" class="alert alert-danger" role="alert"></div>
+                  <div class="d-grid">
+                    <button class="btn btn-warning btn-login text-uppercase fw-bold" type="submit">Entrar</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
