--- a/implementacao/regescweb/src/main/resources/templates/perfil-professor.html
+++ b/implementacao/regescweb/src/main/resources/templates/perfil-professor.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vantagens</title>
+    <title>Professor</title>
     <link rel="stylesheet" th:href="@{/css/login.css}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/cadastro.css}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/cb3fc013e7.js" crossorigin="anonymous"></script>
 </head>
-
 <body>
+    <!-- Navigation -->
     <nav class="navbar navbar-expand-xxl navbarcor font">
         <div class="container-fluid">
             <a class="navbar-brand" href="#" style="padding-left: 20px;">Logo</a>
@@ -26,27 +24,23 @@
                     <li class="nav-item espacamentoitens">
                         <a th:text="${nomeProfessor}" class="nav-link sublinhado"></a>
                     </li>
-                    <li class="nav-item espacamentoitens">
-                        <a class="nav-link sublinhado" href="#">Sobre</a>
-                    </li>
                     <li class="nav-items dropdown espacamentoitens">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             <i class="fas fa-user"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#">Cadastro</a></li>
-                            <li><a class="dropdown-item" href="#">Fazer login</a></li>
-                            <li><a class="dropdown-item" href="#">Dúvidas frequentes</a></li>
+                            <li><a class="dropdown-item" href="login-professor">Fazer logoff</a></li>
                         </ul>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
+    <!-- Content -->
+    <div class="container">
         <h2>Obter vantagem</h2>
-        <h3 th:text="'Saldo atual: ' + ${professor.saldo}">Saldo atual: </h3>
+        <h3 th:text="'Saldo atual: ' + ${professor.saldo}"></h3>
         <form action="/distribuir-saldo" method="post">
             <div class="mb-3">
                 <label for="obter-id-input" class="form-label">Id do Aluno</label>
@@ -55,30 +49,35 @@
                 <label for="obter-saldo-input" class="form-label">Saldo</label>
                 <input type="text" name="saldo" class="form-control" id="obter-saldo-input">
                 <div id="obter-saldo-help" class="form-text">Digite o saldo.</div>
+                <label for="obter-motivo-input" class="form-label">Motivo</label>
+                <input type="text" name="motivo" class="form-control" id="obter-motivo-input">
             </div>
             <button type="submit" class="btn btn-primary">Distribuir</button>
         </form>
     </div>
-<br><br><br>
-    <table class="table">
+   
+    <div class="container">
         <h2>Transações</h2>
-        <thead>
-            <tr>
-                <th>Data</th>
-                <th>Valor</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="transacao : ${transacoesDoProfessor}">
-                <td th:text="${#temporals.format(transacao.data, 'dd/MM/yyyy HH:mm:ss')}"></td>
-                <td th:text="${transacao.valor}"></td>
-            </tr>
-        </tbody>
-    </table>
-
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Data</th>
+                    <th>Valor</th>
+                    <th>Motivo</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="transacao : ${transacoesDoProfessor}">
+                    <td th:text="${#temporals.format(transacao.data, 'dd/MM/yyyy HH:mm:ss')}"></td>
+                    <td th:text="${transacao.valor}"></td>
+                    <td th:text="${transacao.motivo}"></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
