--- a/implementacao/regescweb/src/main/resources/templates/vantagens.html
+++ b/implementacao/regescweb/src/main/resources/templates/vantagens.html
@@ -35,9 +35,7 @@
                             <i class="fas fa-user"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#">Cadastro</a></li>
-                            <li><a class="dropdown-item" href="#">Fazer login</a></li>
-                            <li><a class="dropdown-item" href="#">Dúvidas frequentes</a></li>
+                            <li><a class="dropdown-item" href="login">Fazer logoff</a></li>
                         </ul>
                     </li>
                 </ul>
