--- a/implementacao/regescweb/src/main/resources/static/css/login.css
+++ b/implementacao/regescweb/src/main/resources/static/css/login.css
@@ -1,11 +1,3 @@
-
-.error-message {
-    color: #dc3545;
-}
-
-.success-message {
-    color: #198754;
-}
 /* Estilos gerais */
 body {
     font-family: Arial, sans-serif;
@@ -30,20 +22,14 @@ body {
     margin-right: 15px;
 }
 
-.card-registration {
-    background-color: #fff;
-    border-radius: 15px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.cor {
+.card {
     background-color: #fff;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 20px;
 }
 
-/* Formulário de cadastro */
+/* Formulário de login */
 .form-control {
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -51,24 +37,13 @@ body {
     margin-bottom: 10px;
 }
 
-.form-label {
+.form-floating label {
     color: #000;
 }
 
-.btn-warning {
+.btn-login {
     background-color: #ffc107;
     color: #000;
-}
-
-/* Estilos específicos para a seção de cadastro */
-section {
-    background: url('background-image.jpg');
-    background-size: cover;
-}
-
-h3 {
-    font-size: 24px;
-    font-weight: bold;
 }
 
 /* Estilos para links e botões */
@@ -79,4 +54,14 @@ a {
 
 a:hover {
     text-decoration: underline;
+}
+
+/* Estilos específicos para o formulário de login */
+.card-title {
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.form-check-label {
+    color: #000;
 }
