--- a/implementacao/regescweb/src/main/resources/templates/cadastro-empresa.html
+++ b/implementacao/regescweb/src/main/resources/templates/cadastro-empresa.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-xxl navbarcor font">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#" style="padding-left: 20px;">Logo</a>
+            <a class="navbar-brand" href="#" style="padding-left: 20px;">Logo Empresa</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -38,8 +38,8 @@
                             <i class="fas fa-user"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#">Cadastro</a></li>
-                            <li><a class="dropdown-item" href="#">Fazer login</a></li>
+                            <li><a class="dropdown-item" href="cadastro-empresa">Cadastro</a></li>
+                            <li><a class="dropdown-item" href="login-empresa">Fazer login</a></li>
                             <li><a class="dropdown-item" href="#">Dúvidas frequentes</a></li>
                         </ul>
                     </li>
@@ -56,7 +56,7 @@
                         <div class="row g-0">
                             <div class="">
                                 <div class="card-body p-md-5 text-black">
-                                    <h3 class="mb-5 text-uppercase">Realizar cadastro</h3>
+                                    <h3 class="mb-5 text-uppercase">Realizar cadastro - Empresa</h3>
                                     <form method="POST" action="/cadastrarEmpresa">
                                         <div class="row">
                                             <div class="col-md-6 mb-4">
@@ -74,7 +74,7 @@
                                             <button type="submit" class="btn btn-warning btn-lg ms-2">Cadastrar</button>
                                         </div>
                                         <div th:if="${erro != null}" th:text="${erro}" class="alert alert-danger" role="alert"></div>
-                                        <a href="#">Já possui uma conta? Fazer login</a>
+                                        <a href="login-empresa">Já possui uma conta? Fazer login</a>
                                         
                                     </form>
                                 </div>
