--- a/implementacao/regescweb/src/main/resources/templates/hello.html
+++ b/implementacao/regescweb/src/main/resources/templates/hello.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello!</title>
+    <link rel="stylesheet" href="/css/style.css">
+
 </head>
 <body>
     <h1>Hello <span th:text="${nome}">Zé</span>!</h1>
