--- a/implementacao/regescweb/src/main/resources/templates/home.html
+++ b/implementacao/regescweb/src/main/resources/templates/home.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="~{fragmentos :: head('Home')}"></head>
+<head th:replace="~{fragmentos :: head('Home')}">
+    <link rel="stylesheet" href="/css/style.css">
+
+</head>
 
 <body>
     <header th:replace="~{fragmentos :: header('Bem-vindo Prof. ' + ${professor.getNome()})}"></header>
