--- a/implementacao/regescweb/src/main/resources/templates/login-empresa.html
+++ b/implementacao/regescweb/src/main/resources/templates/login-empresa.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" th:href="@{/css/login.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/css/cadastro.css}">
+    <link rel="stylesheet" th:href="@{/css/login.css}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/cb3fc013e7.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-xxl navbarcor font">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#" style="padding-left: 20px;">Logo</a>
+            <a class="navbar-brand" href="#" style="padding-left: 20px;">Logo Empresa</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,10 +22,10 @@
             <div class="collapse navbar-collapse " id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto controle">
                     <li class="nav-item espacamentoitens">
-                        <a class="nav-link active sublinhado" aria-current="page" href="#">Login</a>
+                        <a class="nav-link active sublinhado" aria-current="page" href="login-empresa">Login</a>
                     </li>
                     <li class="nav-item espacamentoitens">
-                        <a class="nav-link sublinhado" href="#">Cadastro</a>
+                        <a class="nav-link sublinhado" href="cadastro-empresa">Cadastro</a>
                     </li>
                     <li class="nav-item espacamentoitens">
                         <a class="nav-link sublinhado" href="#">Sobre</a>
@@ -36,8 +36,8 @@
                             <i class="fas fa-user"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#">Cadastro</a></li>
-                            <li><a class="dropdown-item" href="#">Fazer login</a></li>
+                            <li><a class="dropdown-item" href="cadastro-empresa">Cadastro</a></li>
+                            <li><a class="dropdown-item" href="login-empresa">Fazer login</a></li>
                             <li><a class="dropdown-item" href="#">Dúvidas frequentes</a></li>
                         </ul>
                     </li>
@@ -74,7 +74,7 @@
                     <button class="btn btn-warning btn-login text-uppercase fw-bold" type="submit">Entrar</button>
                   </div>
 
-                  <a class="d-block text-center mt-2 small" href="cadastro">Não possui uma conta? Criar conta</a>
+                  <a class="d-block text-center mt-2 small" href="cadastro-empresa">Não possui uma conta? Criar conta</a>
                 </form>
               </div>
             </div>
