--- a/implementacao/regescweb/src/main/resources/templates/login-professor.html
+++ b/implementacao/regescweb/src/main/resources/templates/login-professor.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" th:href="@{/css/login.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/css/cadastro.css}">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+        <link rel="stylesheet" th:href="@{/css/login.css}">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/cb3fc013e7.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse " id="navbarNavDropdown">
                 <ul class="navbar-nav ms-auto controle">
                     <li class="nav-item espacamentoitens">
-                        <a class="nav-link active sublinhado" aria-current="page" href="#">Login</a>
+                        <a class="nav-link active sublinhado" aria-current="page" href="login-professor">Login</a>
                     </li>
                     <li class="nav-item espacamentoitens">
                         <a class="nav-link sublinhado" href="#">Sobre</a>
