--- a/implementacao/regescweb/src/main/resources/templates/login.html
+++ b/implementacao/regescweb/src/main/resources/templates/login.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" th:href="@{/css/login.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" th:href="@{/css/cadastro.css}">
+        <link rel="stylesheet" th:href="@{/css/login.css}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/cb3fc013e7.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-xxl navbarcor font">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#" style="padding-left: 20px;">Logo</a>
+            <a class="navbar-brand" href="#" style="padding-left: 20px;">Logo User</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
                         <a class="nav-link active sublinhado" aria-current="page" href="#">Login</a>
                     </li>
                     <li class="nav-item espacamentoitens">
-                        <a class="nav-link sublinhado" href="#">Cadastro</a>
+                        <a class="nav-link sublinhado" href="cadastro">Cadastro</a>
                     </li>
                     <li class="nav-items dropdown espacamentoitens">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -33,7 +33,7 @@
                             <i class="fas fa-user"></i>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#">Cadastro</a></li>
+                            <li><a class="dropdown-item" href="cadastro">Cadastro</a></li>
                             <li><a class="dropdown-item" href="#">Fazer login</a></li>
                         </ul>
                     </li>
