--- a/implementacao/regescweb/src/main/resources/templates/cadastro.html
+++ b/implementacao/regescweb/src/main/resources/templates/cadastro.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar navbar-expand-xxl navbarcor font">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#" style="padding-left: 20px;">Logo Usuario</a>
+            <a class="navbar-brand" href="login" style="padding-left: 20px;">Easy Coin</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
