--- a/implementacao/regescweb/src/main/resources/templates/login.html
+++ b/implementacao/regescweb/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-xxl navbarcor font">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#" style="padding-left: 20px;">Logo User</a>
+          <a class="navbar-brand" href="login" style="padding-left: 20px;">Easy Coin</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -26,6 +26,12 @@
                     </li>
                     <li class="nav-item espacamentoitens">
                         <a class="nav-link sublinhado" href="cadastro">Cadastro</a>
+                    </li>
+                    <li class="nav-item espacamentoitens">
+                      <a class="nav-link sublinhado" href="login-professor">Área do Professor</a>
+                    </li>
+                    <li class="nav-item espacamentoitens">
+                      <a class="nav-link sublinhado" href="login-empresa">Área da Empresa</a>
                     </li>
                     <li class="nav-items dropdown espacamentoitens">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
