[FIX] Corrigir header de card de distribuir moedas

--- a/implementacao/regescweb/src/main/resources/templates/perfil-professor.html
+++ b/implementacao/regescweb/src/main/resources/templates/perfil-professor.html
@@ -43,7 +43,7 @@
     <!-- Content -->
     <div class="container" style="margin-top: 20px;">
         <div class="card">
-            <h2>Obter vantagem</h2>
+            <h2>Distribuir moedas</h2>
             <br>
             <h3 th:text="'Saldo atual: ' + ${professor.saldo}"></h3>
             <form action="/distribuir-saldo" method="post">
